--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1",
     "wepack-cli": "^0.0.1-security"
+  },
+  "scripts": {
+    "build": "webpack",
+    "dev": "webpack serve",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
