fixing scripts and issues with webpack merging

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "wepack-cli": "^0.0.1-security"
   },
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve",
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --open --config webpack.dev.js",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
 }
